--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -11,7 +11,7 @@
   (scroll)="onScroll($event)"
   #box
 >
-  <mat-card id="nolist" *ngIf="!isList && condition.select !== 'google'">
+  <mat-card class="nolist" *ngIf="!isList && condition.select !== 'google'">
     <mat-card-content>
       {{ "NotFindRecommendations" | translate }}<br />
       {{ "Instead" | translate
@@ -23,19 +23,22 @@
       >{{ "SearchSpot" | translate }}
     </mat-card-content>
   </mat-card>
-  <mat-card id="nolist" *ngIf="!isList && condition.select === 'google'">
+  <mat-card class="nolist" *ngIf="!isList && condition.select === 'google'">
     <mat-card-content>
       {{ "GoogleSearchAny" | translate }}<br />
       {{ "ReplaceKeyword" | translate }}<br />
       {{ "includedPlan" | translate }}
     </mat-card-content>
   </mat-card>
-  <mat-card id="nolist" *ngIf="!isList && condition.select === 'user'">
+
+  <mat-card class="nolist" *ngIf="!isList && condition.select === 'user'">
     <mat-card-content>
       {{ "UserPlan" | translate }}
     </mat-card-content>
   </mat-card>
+
   <ng-content> </ng-content>
+
   <button *ngIf="!isMobile" class="scroll-to-top" (click)="scrollToTop()">
     <img src="../../../../../assets/img/toTop3.svg" alt="toTop" />
   </button>
