--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -1205,6 +1205,16 @@ div.plandtl {
               }
             }
           }
+          .alt{
+            position: absolute;
+            top:50%;
+            transform: translateY(-50%);
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            width: 95%;
+            text-align: center;
+            font-size: 12px;
+          }
         }
 
         .spot-overview {
