--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1456,6 +1456,17 @@ form {
               }
             }
           }
+
+          .alt{
+            position: absolute;
+            top:50%;
+            transform: translateY(-50%);
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            width: 95%;
+            text-align: center;
+            font-size: 12px;
+          }
         }
       }
     }
