--- a/src/app/pages/planspot/planspot.component.scss
+++ b/src/app/pages/planspot/planspot.component.scss
@@ -96,6 +96,8 @@
     }
     &.right{
       flex-basis: 22%;
+      display: flex;
+      justify-content: end;
       .wrap{
         width: 90px;
         height: 90px;
