upd利用規約他

--- a/src/app/pages/offcial/privacy/privacy.component.html
+++ b/src/app/pages/offcial/privacy/privacy.component.html
@@ -12,11 +12,11 @@
             <dd>1)お問い合わせに対する回答を行うため</dd>
             <dd>2)会員登録管理及びサービスのご提供のため</dd>
             <dd>3)弊社のサービス、催し物のご案内のため</dd>
-            <dd>4)料金請求、課金計算のため</dd>
+            <dd>4)有料会員様向けの料金請求、課金計算のため</dd>
           </dl>
 
-          <H4>【第三者への提供】</H4>
-          <p>お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡</p>
+          <H4>【第三者への公開情報】</H4>
+          <p>お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例:プランやレビュー）は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡</p>
 
           <h4>【個人情報の取扱い業務の委託】</h4>
           <p>
@@ -27,10 +27,10 @@
           <p>お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。</p>
 
           <h4>【個人情報の開示請求について】</h4>
-          <p>お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があります。詳細につきましては下記の窓口までご連絡ください。</p>
+          <p>お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があります。</p>
 
           <div class="company">
-            運営会社：株式会社リモージュ
+            運営：Ｒｅｍｏｊｕ株式会社（リモージュ カブシキガイシャ）
           </div>
 
         </mat-card-content>
@@ -42,7 +42,7 @@
           <h1>ご利用規約</h1>
           <h4>第1条(用語の定義)</h4>
           <p>
-            「本サービス」とは、株式会社日本ラノス（https://www.lanos.co.jp/）（以下、「当社」といいます）が運営するインターネットサービス「Remoju」に関連して提供するウェブサイト、ソフトウェア、アプリケーションその他一切の製品およびサービスを指します。
+            「本サービス」とは、Ｒｅｍｏｊｕ株式会社（https://www.remoju.com/）（以下、「当社」といいます）が運営するインターネットサービス「Remoju」に関連して提供するウェブサイト、ソフトウェア、アプリケーションその他一切の製品およびサービスを指します。
             本サービスにおける「投稿」とは、本サービスを通じて投稿された、テキスト、画像などのあらゆる情報を指します。「会員」とは、本サービスに会員登録をした者のことを指します。「利用者」とは、本サービスを利用するすべての者のことを指します。
           </p>
 
@@ -55,7 +55,7 @@
           </p>
 
           <h4>第４条（個人情報の利用）</h4>
-          <p>会員が当社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報は、本サービスのウェブサイト・アプリ上で当社が定める期間公開され、利用者が自由に閲覧することができます｡
+          <p>会員が当社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例：プランやレビュー）は、本サービスのウェブサイト・アプリ上で当社が定める期間公開され、利用者が自由に閲覧することができます｡
             また、届け出た個人情報については会員本人のみが自由に編集することができ、その内容について起因する損害についても当社は一切の責任を負わないものとします。</p>
 
           <h4>第5条（著作権の保護）</h4>
@@ -130,7 +130,11 @@
           <p>本規約は、日本法を準拠とし、解釈されるものとします。
             また本サービスと利用者の間の訴訟が生じた場合、東京地方裁判所を第一審の専属管轄裁判所とします。</p>
 
-          <p>以上</p>
+          <p style="text-align: right;">以上</p>
+
+          <div class="company">
+            Ｒｅｍｏｊｕ株式会社（リモージュ カブシキガイシャ）
+          </div>
         </mat-card-content>
       </mat-card>
     </mat-tab>
