upd利用規約他

--- a/src/app/pages/offcial/about/about.component.html
+++ b/src/app/pages/offcial/about/about.component.html
@@ -2,7 +2,7 @@
   <mat-card-content>
     <h1>about</h1>
     <ul>
-      <li><span class="title">会社名</span>Remoju株式会社</li>
+      <li><span class="title">会社名</span>Ｒｅｍｏｊｕ株式会社（リモージュ カブシキガイシャ）</li>
       <li><span class="title">設立</span>2019年8月</li>
       <li><span class="title">所在地</span>東京都港区芝浦４－１９－１</li>
       <li><span class="title">資本金</span>5,000万円</li>
