--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1466,6 +1466,7 @@ form {
             width: 95%;
             text-align: center;
             font-size: 12px;
+            font-weight: bolder;
           }
         }
       }
