--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -1214,6 +1214,7 @@ div.plandtl {
             width: 95%;
             text-align: center;
             font-size: 12px;
+            font-weight: bolder;
           }
         }
 
