--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -303,6 +303,7 @@ div.banner {
             width: 95%;
             text-align: center;
             font-size: 11px;
+            font-weight: bolder;
           }
         }
       }
