--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -33,7 +33,7 @@
                 <div class="thumbmain">
                   <img
                     decoding="async"
-                    [src]="item.pictures[i]?item.pictures[i]:noPic"
+                    [src]="item.pictures[i+1]?item.pictures[i+1]:noPic"
                     [alt]=""
                     [title]="item.spotName"
                     (load)="imageloaded = true"
