--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -8,7 +8,7 @@
       alt=""
     />
     <div class="caption">次はどこへ行く?</div>
-    <div class="scroll">
+    <div class="scroll" >
       scroll
       <svg class="arrows">
         <path class="a1" d="M0 0 L30 32 L60 0"></path>
@@ -64,9 +64,10 @@
         <div class="balloon">myプランに入れてみよう</div>
       </div>
     </div>
+    <div id="step1"></div>
   </div>
 
-  <div class="section step2">
+  <div class="section step2" id="step2">
     <div class="head">
       <div class="step2-mark">
         <img src="../../../../../assets/img/guide/step2.png" alt="" />
@@ -121,7 +122,7 @@
     </div>
   </div>
 
-  <div class="section step3">
+  <div class="section step3" id="step3">
     <div class="head">
       <div class="step3-mark">
         <img src="../../../../../assets/img/guide/step3.png" alt="" />
@@ -160,7 +161,7 @@
     </div>
   </div>
 
-  <div class="section step4">
+  <div class="section step4" id="step4">
     <div class="head">
       <div class="step4-mark">
         <img src="../../../../../assets/img/guide/step4.png" alt="" />
