--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -885,9 +885,9 @@ form {
         }
       }
 
-      &.blank {
-        visibility: hidden;
-      }
+      // &.blank {
+      //   //visibility: hidden;
+      // }
     }
 
     button.clear {
