--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -1,6 +1,11 @@
 <div class="container" id="cont">
   <div id="load__mask"></div>
 
+  <!--
+  <div id="scroll">
+    <a href="#">SCROLL</a>
+  </div>
+-->
   <div class="section top">
     <img
       class="logo"
@@ -8,7 +13,7 @@
       alt=""
     />
     <div class="caption">次はどこへ行く?</div>
-    <div class="scroll" >
+    <div class="scroll scroll1">
       scroll
       <svg class="arrows">
         <path class="a1" d="M0 0 L30 32 L60 0"></path>
@@ -64,7 +69,14 @@
         <div class="balloon">myプランに入れてみよう</div>
       </div>
     </div>
-    <div id="step1"></div>
+    <div class="scroll scroll2">
+      scroll
+      <svg class="arrows">
+        <path class="a1" d="M0 0 L30 32 L60 0"></path>
+        <path class="a2" d="M0 20 L30 52 L60 20"></path>
+        <path class="a3" d="M0 40 L30 72 L60 40"></path>
+      </svg>
+    </div>
   </div>
 
   <div class="section step2" id="step2">
@@ -120,6 +132,14 @@
         />
       </div>
     </div>
+    <div class="scroll scroll3">
+      scroll
+      <svg class="arrows">
+        <path class="a1" d="M0 0 L30 32 L60 0"></path>
+        <path class="a2" d="M0 20 L30 52 L60 20"></path>
+        <path class="a3" d="M0 40 L30 72 L60 40"></path>
+      </svg>
+    </div>
   </div>
 
   <div class="section step3" id="step3">
@@ -158,6 +178,14 @@
           alt=""
         />
       </div>
+    </div>
+    <div class="scroll scroll4">
+      scroll
+      <svg class="arrows">
+        <path class="a1" d="M0 0 L30 32 L60 0"></path>
+        <path class="a2" d="M0 20 L30 52 L60 20"></path>
+        <path class="a3" d="M0 40 L30 72 L60 40"></path>
+      </svg>
     </div>
   </div>
 
