--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -325,7 +325,8 @@ div.banner {
           @include marks();
 
           .areaName {
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #fff;
             padding: 0 4px;
             line-height: 26px;
             white-space: pre-wrap;
