--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -46,8 +46,8 @@ form {
 .transport {
   display: flex;
 
-  flex-direction: column;
-  //align-items: center;
+  flex-direction: row;
+  align-items: center;
 
   justify-content: space-between;
 
